more ui changes and spacing fixes

--- a/styles/style.css
+++ b/styles/style.css
@@ -48,7 +48,16 @@ main{
 /* buttons */
 .btn-primary{
     background-color: #fd6e0a;
-    border: none;
+    border: 1px solid #fd6e0a;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    padding: 18px 36px;
+}
+.btn-primary:hover{
+    background-color: #fd9850;
+    border: 1px solid #fd6e0a;
     border-radius: 5px;
     color: white;
     font-weight: bold;
@@ -64,16 +73,27 @@ main{
     font-size: 20px;
     padding: 18px 36px;
 }
+.btn-secondary:hover{
+    background-color: rgba(255, 180, 109, 0.162);
+    border: 1px solid #fd6e0a;
+    border-radius: 5px;
+    color: #fd6e0a;
+    font-weight: bold;
+    font-size: 20px;
+    padding: 18px 36px;
+}
 
 /* header */
 .header{
     background:
         url(../assets/images/developer.png) no-repeat top left, 
-        url(../assets/images/header_bg.png) no-repeat bottom right;
+        url(../assets/images/header_bg.png) no-repeat bottom right,
+        #fff8f3;
 }
 
 /* navbar styling */
 nav{
+    height: 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -106,6 +126,7 @@ nav li a{
 }
 .banner-content{
     max-width: 580px;
+    margin-bottom: 50px;
 }
 .banner-greet{
     font-size: 45px;
@@ -122,13 +143,12 @@ nav li a{
     display: flex;
     gap: 10px;
 }
-/* .banner-img{
-    position: a;
-} */
+.banner-img{
+    display: flex;
+    
+}
 .banner-pic{
-    width: 580px;
-    position: relative;
-    top: 5px;
+    max-width: 520px;
 }
 
 /* about styling */
@@ -245,16 +265,17 @@ nav li a{
     .btn-holder{
         gap: 2px;
         flex-direction: column;
+        align-items: end;
     }
 
     /* header */
     nav{
         scale: 0.8;
-        margin: 0 0;
+        margin: 0 0 20px;
         flex-wrap: wrap;
     }
     nav li{
-        margin: 0, 0;
+        margin: 0 0;
     }
     .banner{
         flex-direction: column;
@@ -317,6 +338,9 @@ nav li a{
     }
     .banner{
         flex-direction: column;
+    }
+    .banner-pic{
+        max-width: 100%;
     }
     .about{
         padding: 30px 50px;
